# claw-plus-plus

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  PARITY.md  README.md  vcpkg.json
docs/: architecture.md
include/claw++/api/: anthropic.hpp  ollama.hpp  openai.hpp  provider.hpp  streaming.hpp
include/claw++/commands/: command.hpp  registry.hpp
include/claw++/core/: config.hpp  error.hpp  expected_compat.hpp  types.hpp
include/claw++/plugins/: loader.hpp  plugin.hpp
include/claw++/runtime/: agent.hpp  context.hpp
include/claw++/session/: session.hpp  storage.hpp
include/claw++/tools/: manifest.hpp  registry.hpp  tool.hpp
include/claw++/utils/: logging.hpp  string_utils.hpp  terminal.hpp
skills/example/: README.md
src/: main.cpp
src/api/: anthropic.cpp  ollama.cpp  openai.cpp  provider.cpp  streaming.cpp
src/commands/: builtins.cpp  registry.cpp
src/core/: config.cpp  error.cpp
src/plugins/: loader.cpp
src/runtime/: agent.cpp  context.cpp
src/session/: session.cpp  storage.cpp
src/tools/: filesystem.cpp  git.cpp  notebook.cpp  registry.cpp  search.cpp  shell.cpp  todo.cpp  web_fetch.cpp
src/utils/: logging.cpp  string_utils.cpp  terminal.cpp
tests/: CMakeLists.txt  parity_test.ps1  test_commands.cpp  test_config.cpp  test_context.cpp  test_integration.cpp  test_main.cpp  test_session.cpp  test_sse_parser.cpp  test_string_utils.cpp  test_tools.cpp
